--- a/UI Design/Prototypes/Prototype_3/Prototype_3/Prototype_3.csproj
+++ b/UI Design/Prototypes/Prototype_3/Prototype_3/Prototype_3.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web">
+      <HintPath>..\..\..\..\..\..\..\..\Windows\Microsoft.NET\Framework\v2.0.50727\System.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
