--- a/Source/Pion/Pion.Domain/Pion.Domain.csproj
+++ b/Source/Pion/Pion.Domain/Pion.Domain.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,10 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DissectibleString.cs" />
     <Compile Include="InvalidSyntaxException.cs" />
     <Compile Include="IVideoRepository.cs" />
     <Compile Include="IWebsiteRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SlicableString.cs" />
+    <Compile Include="StringMarker.cs" />
+    <Compile Include="StringMarkingNotFoundException.cs" />
     <Compile Include="VideoDownloadProgressChanged.cs" />
     <Compile Include="YouTubeParser.cs" />
   </ItemGroup>
