implement settings window, giving the entire application download capabilities

--- a/Source/Pion/Pion.UI.Themes.Guanine/Pion.UI.Themes.Guanine.csproj
+++ b/Source/Pion/Pion.UI.Themes.Guanine/Pion.UI.Themes.Guanine.csproj
@@ -81,6 +81,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\TextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Arc.cs" />
