--- a/Source/Pion/Pion.UI/Pion.UI.csproj
+++ b/Source/Pion/Pion.UI/Pion.UI.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Pion.UI</RootNamespace>
-    <AssemblyName>Pion.UI</AssemblyName>
+    <AssemblyName>Pion</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
